<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_form">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/perkara"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_input"
                    android:ems="10"
                    android:id="@+id/spinnerPerkara"
                    android:entries="@array/perkara"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/no_psh"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_input"
                    android:ems="10"
                    android:id="@+id/editNomorPSH"
                    android:inputType="number"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/tanggal"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/imgDate"
                        android:layout_marginRight="8dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/date"
                        android:layout_weight="1"></ImageView>
                    <EditText
                        android:id="@+id/txtDate"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_input"
                        android:ems="10"
                        android:enabled="false"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/nama_terduga_pelanggar"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_input"
                    android:ems="10"
                    android:id="@+id/editNamaPSH"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/pangkat"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_input"
                    android:ems="10"
                    android:id="@+id/editPangkat"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/nrp"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_input"
                    android:ems="10"
                    android:id="@+id/editNRP"
                    android:inputType="number"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/kesatuan"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_input"
                    android:ems="10"
                    android:id="@+id/spinnerkesatuan"
                    android:entries="@array/kesatuan"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/pasal_dilanggar"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_input"
                    android:ems="10"
                    android:id="@+id/editPasalDilanggar"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10px">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textSize="20dp"
                    android:text="Upload Dokumen ?" />

                <CheckBox
                    android:id="@+id/pilih"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorLink="#fff"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/psh_document"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_input"
                    android:ems="10"
                    android:id="@+id/bttnUpload"
                    android:text="File..."
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bttnSimpan"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bttn_simpan"
                    android:ems="10"
                    android:text="Simpan"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>